[bdist_wheel]
universal = 1
python-tag = py3

[metadata]
license_file = LICENSE

[zest.releaser]
; semver-style versions
version-levels = 3

; tags: vX.Y.Z; the double-percent is a guard against ConfigParser.
tag-format = v{version}
tag-message = Release version {version}

; Version flag location (we use __version__)
python-file-with-version = mpdlcd/__init__.py

[distutils]
index-servers = pypi
